<resources>
    <string name="app_name">ProjectTemplate</string>
    <string name="facebook_app_id">908388076334268</string>
    <string name="fb_login_protocol_scheme">fb908388076334268</string>
    <string name="com.twitter.sdk.android.CONSUMER_KEY">MVfKntw1IRMNP5O04uLsjFpVB</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET">e06wPlYIRBjX6oSfqFs2GYnybA4HT2RSR208vYVVuE6Rwvxjj7</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_userRegistration">User Not registered,   please try again after some time.</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="message_loader_loading_users">Loading Users...</string>
    <string name="hint_aregister_firstname">E-Mail ID</string>
    <string name="hint_fregister_email">E-Mail ID</string>
    <string name="hint_fregister_password">Password</string>
    <string name="hint_fregister_repassword">Re-Enter Password</string>
    <string name="btn_aregister_register">Register</string>
    <string name="message_loader_registering">Registering User...</string>
    <string name="message_loader_logging">Logging In...</string>
    <string name="btn_flogin_register">Create An Account</string>
    <string name="btn_alogin_google">Google</string>
    <string name="btn_alogin_facebook">Facebook</string>
    <string name="btn_alogin_login">Login</string>
    <string name="message_loader_loading_albums">Loading Albums...</string>

    <string name="msg_enterFirstName">Please Enter FirstName</string>
    <string name="msg_enterLastName">Please Enter LastName</string>

    <string name="msg_enterTitle">Please Enter title</string>
    <string name="msg_enterUserId">Please Enter userId</string>
    <string name="hint_albumId">Album Id</string>
    <string name="hint_userId">User Id</string>
    <string name="hint_title">Title</string>
    <string name="error_enterEmailAddress">Please enter E-Mail Address</string>
    <string name="error_enterValidEmailAddress">Please enter valid email address.</string>
    <string name="error_enterPassword">Please enter password</string>
    <string name="error_network_no_internet">Please check your internet connection</string>

    <string name="btn_dialog_okay">Okay</string>
    <string name="btn_dialog_cancel">Cancel</string>
    <string name="image_picker_title">Choose Photo Option</string>
    <string name="error_camera_not_available">Your device does not support camera.</string>
    <string name="btn_dialog_retry">Retry</string>
    <string name="loader">Loading...</string>
    <string name="twitter">Twitter</string>

    <!--Social App name check during login-->
    <string name="app_twitter">Twitter</string>
    <string name="app_facebook">Facebook</string>
    <string name="app_google">Google</string>
</resources>
