<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="event"
            type="com.ftx.mvvm_template.views.fragments.RegisterFragment" />

    </data>


    <ScrollView
        android:id="@+id/activity_registration"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.ftx.mvvm_template.views.widgets.CustomEditText
                    android:id="@+id/fRegister_edtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_fregister_email"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_standard"
                app:passwordToggleTint="@color/colorPrimary">

                <com.ftx.mvvm_template.views.widgets.CustomEditText
                    android:id="@+id/fRegister_edtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_fregister_password"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_repassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_standard"
                app:passwordToggleTint="@color/colorPrimary">

                <com.ftx.mvvm_template.views.widgets.CustomEditText
                    android:id="@+id/fRegister_edtRePassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_fregister_repassword"
                    android:inputType="textPassword" />

            </android.support.design.widget.TextInputLayout>


            <com.ftx.mvvm_template.views.widgets.CustomButton
                android:id="@+id/aRegister_btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_standard"
                android:background="@color/colorPrimary"
                android:onClick="@{() -> event.onClickRegister()}"
                android:text="@string/btn_aregister_register"
                android:textColor="@android:color/white" />

        </LinearLayout>

    </ScrollView>
</layout>