<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="event"
            type="com.ftx.mvvm_template.views.activities.DetailActivity" />

        <variable
            name="albumModel"
            type="com.ftx.mvvm_template.model.db.models.AlbumModel" />

        <variable
            name="userModel"
            type="com.ftx.mvvm_template.model.db.models.UserModel" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/llAppBase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:background="?attr/colorPrimary"
                android:minHeight="?attr/actionBarSize"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:titleTextColor="@android:color/white">

            </android.support.v7.widget.Toolbar>

        </android.support.constraint.ConstraintLayout>

        <LinearLayout
            android:id="@+id/lnr_insertdata"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="visible">

            <EditText
                android:id="@+id/edt_albumId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="30dp"
                android:ems="10"
                android:focusable="false"
                android:hint="@string/hint_albumId"
                android:inputType="phone"
                android:text="@{albumModel != null ? String.valueOf(albumModel.id) : (userModel != null ? String.valueOf(userModel.id) : View.GONE)}" />

            <EditText
                android:id="@+id/edt_userId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:ems="10"
                android:hint="@string/hint_userId"
                android:inputType="number"
                android:text="@{albumModel != null ? String.valueOf(albumModel.userId) : (userModel != null ? userModel.firstName : View.GONE)}" />

            <EditText
                android:id="@+id/edt_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:ems="10"
                android:hint="@string/hint_title"
                android:inputType="textPersonName"
                android:text="@{albumModel != null ? albumModel.title : (userModel != null ? userModel.lastName : View.GONE)}" />


            <Button
                android:id="@+id/btn_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> (albumModel != null ? event.updateAlbumModel() : event.updateUserModel())}"
                android:text="Update" />

            <Button
                android:id="@+id/btn_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:onClick="@{() -> (albumModel != null ? event.deleteAlbumModel() : event.deleteUserModel())}"
                android:text="Delete" />

        </LinearLayout>

    </LinearLayout>
</layout>